<resources>
    <string name="app_name">FitnessApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="km_h" translatable="false" />
    <string name="speed_icon" translatable="false">\n\n</string>
    <string name="footprint" translatable="false" />
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="steps">Steps</string>
    <string name="hello_ala">Hello,Ala</string>
    <string name="let_s_check_your_activity">Let\'s check your activity</string>
    <string name="finished">Finished</string>
    <string name="completed_workout">Completed Workout</string>
    <string name="in_progress">In Progress</string>
    <string name="workout">Workout</string>
    <string name="time_spent">Time Spent</string>
    <string name="minutes">Minutes</string>
    <string name="discover_new_workouts">Discover New Workouts</string>
    <string name="keep_the_progress">Keep the progress !</string>
    <string name="your_are_more_ssuccessful_then_88_nof_the_users">you are more successful than 88% of the users</string>
    <string name="user_name">Username</string>
    <string name="enter_height_in_meters">Enter Height (in meters)</string>
    <string name="enter_weight_in_kg">Enter Weight (in kg)</string>
    <string name="update">Update</string>
    <string name="description">Description</string>
    <string name="bmi" translatable="false">BMI</string>
    <string name="workouts">Workouts</string>
    <string name="_0" translatable="false">0</string>
    <string name="_0_km_h" translatable="false">0 KM/H</string>
    <string name="language">Language</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
       AIzaSyA9CamnVenbDKPKO050TiGh3Q8yt3h1YfQ
    </string>
    <string name="gps">gps</string>
</resources>