<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <RelativeLayout
        android:id="@+id/WelcomeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_ala"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/UserName"
            android:text="@string/let_s_check_your_activity"
            android:textColor="#972E2B2B"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="50dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="user"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/finishedWorkOut"
        android:layout_width="160dp"
        android:layout_height="210dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:elevation="20dp"
        android:outlineAmbientShadowColor="#D51A1A"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WelcomeBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="body_icon"
                android:src="@drawable/muscle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_gravity="center"
                android:paddingStart="10dp"
                android:text="@string/finished"


                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:id="@+id/finishedWorkOutHome"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/completed_workout"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/inProgress"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:elevation="20dp"
        app:layout_constraintLeft_toRightOf="@id/finishedWorkOut"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WelcomeBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="body_icon"
                android:src="@drawable/chicken" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_progress"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inProgressHome"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout"
                android:textColor="#977A7676"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/timeSpent"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical"
        android:elevation="20dp"
        app:layout_constraintLeft_toRightOf="@id/finishedWorkOut"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inProgress">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="body_icon"
                android:src="@drawable/stopwatch"
                android:scaleType="centerCrop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_spent"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingStart="17dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TimeSpentHome"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                android:textColor="#977A7676" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/simple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/discover_new_workouts"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finishedWorkOut" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simple"
        android:id="@+id/workOuts"
        android:orientation="horizontal"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corners"
        android:elevation="20dp"
        android:orientation="horizontal"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workOuts">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/celebrate" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/keep_the_progress"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_are_more_ssuccessful_then_88_nof_the_users" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>