<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_corners"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:id="@+id/SpeedLayout">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/speed_icon"
            android:src="@drawable/speed" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_h"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/SpeedLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rounded_corners"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:id="@+id/stepsLayout">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/footprint"
            android:src="@drawable/footprint" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:id="@+id/steps"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Steps"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/stepsLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>