<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:background="@color/light_blue_50"
    android:padding="16dp">
    <ImageView
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="end"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:id="@+id/editIcon"
        android:src="@drawable/edit"/>
    <LinearLayout
        android:id="@+id/user"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editIcon"
        android:background="@drawable/edittext_border_blue"
        >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/user_name"
        >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/editTextUserName"
                android:enabled="false"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="50dp"
            android:layout_marginStart="10dp"
            >


            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="user"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LayoutTextHeight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_border_blue"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/hight"/>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:hint="@string/enter_height_in_meters"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextHeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LayoutTextWeight"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LayoutTextHeight"
        android:background="@drawable/edittext_border_blue"
        android:padding="10dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/weighing_machine"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_weight_in_kg"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextWeight"
                android:enabled="false"
                android:inputType="numberDecimal"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_BMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/edittext_border_blue"

            app:layout_constraintTop_toBottomOf="@id/LayoutTextWeight">

            <TextView
                android:id="@+id/BMI"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"

                android:padding="10dp"
                android:text="@string/bmi"
                android:textSize="16sp" />

            <TextView
                android:padding="10dp"
                android:id="@+id/bmi_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="your bmi is normal" />
        </LinearLayout>


    <LinearLayout
        android:id="@+id/language"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_border_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_BMI" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

    </LinearLayout>
    <com.github.mikephil.charting.charts.BarChart
        android:layout_marginTop="10dp"
        android:id="@+id/chart"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
